--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,7 @@ name: Python package
 on: [push]
 jobs:
   build:
-    defaults:
-      run:
-        working-directory: ./
+  
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -13,6 +11,6 @@ jobs:
         with:
           python-version: "3.9"
       - name: Install packages
-        run: pip install -r requirement.txt
+        run: pip install -r requirements.txt
       - name: Run tests
         run: python manage.py test
